# python-template

./: .gitignore  README.md  pyproject.toml
example_package/: decorators.py  example_base_class.py  example_class.py  example_dataloader.py  example_generator_iterator.py  lambda_filter_reduce_map.ipynb  main.py
notebooks/: lambda_filter_reduce_map.ipynb  lambda_functions.ipynb
src/example-package/: example_class.py  example_dataloader.py
test/: test_batches.py
